# qtcplugin

./: CMakeLists.txt  Qtcplugin.json.in  README.md  qtcplugin.cpp  qtcplugin.h  qtcplugin_global.h  qtcpluginconstants.h  qtcplugintr.h
.github/scripts/: plugin.json
.github/workflows/: build_cmake.yml
